plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.10'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'sparta'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // spring boot starter data
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    // spring boot starter
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-web'

    //password encode
    implementation 'at.favre.lib:bcrypt:0.10.2'

    //jwt
    implementation 'io.jsonwebtoken:jjwt:0.12.6'

    // AWS S3
    implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'

    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'com.mysql:mysql-connector-j'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    implementation 'mysql:mysql-connector-java:8.0.33'


    // Redis
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    // 버전 깨짐으로 추가
    implementation 'io.lettuce:lettuce-core:6.2.6.RELEASE'
}

tasks.named('test') {
    useJUnitPlatform()
}
